[tool]
[tool.poetry]
name = "cleaners"
version = "2022.9.1"
homepage = "https://github.com/ScottMGustafson/cleaners"
description = "Data cleaners for DS projects in the scikit-learn pipeline format."
authors = ["scott gustafson <s1gustaf@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cleaners" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.4.3"
dask = "^2022.9.1"
scikit-learn = "^1.1.2"
distributed = "^2022.9.1"
dask-ml = "^2022.5.27"
Cython = "^0.29.32"
mypy = {version = "^0.971", extras = ["test"]}
black = {version = "^22.8.0", extras = ["test"]}
isort = {version = "^5.10.1", extras = ["test"]}
types-PyYAML = {version = "^6.0.11", extras = ["test"]}
flake8 = {version = "^5.0.4", extras = ["test"]}
flake8-docstrings = {version = "^1.6.0", extras = ["test"]}
pytest-cov = {version = "^3.0.0", extras = ["test"]}
coverage = {version = "^6.4.4", extras = ["test"]}
tox = {version = "^3.26.0", extras = ["dev"]}
virtualenv = {version = "^20.16.5", extras = ["dev"]}
pip = {version = "^22.2.2", extras = ["dev"]}
twine = {version = "^4.0.1", extras = ["dev"]}
toml = {version = "^0.10.2", extras = ["dev"]}
bump2version = {version = "^1.0.1", extras = ["dev"]}
ipykernel = {version = "^6.15.3", extras = ["dev"]}
jupyter = {version = "^1.0.0", extras = ["dev"]}
jupyterlab = {version = "^3.4.7", extras = ["dev"]}
jupyterlab-code-formatter = {version = "^1.5.3", extras = ["dev"]}
mkdocs = {version = "^1.3.1", extras = ["doc"]}
mkdocs-include-markdown-plugin = {version = "^3.8.1", extras = ["doc"]}
mkdocs-material = {version = "^8.5.2", extras = ["doc"]}
mkdocstrings = {version = "^0.19.0", extras = ["doc"]}
mkdocs-material-extensions = {version = "^1.0.3", extras = ["doc"]}
mkdocs-autorefs = {version = "^0.4.1", extras = ["doc"]}
nbmake = {version = "^1.3.4", extras = ["test"]}

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
