[tool]
[tool.poetry]
name = "cleaners"
version = "2023.2.0"
homepage = "https://github.com/ScottMGustafson/cleaners"
description = "Data cleaners for DS projects in the scikit-learn pipeline format."
authors = ["scott gustafson <s1gustaf@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cleaners" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^1.4.3"
dask = "^2022.9.1"
scikit-learn = "^1.1.2"
distributed = "^2022.9.1"
dask-ml = "^2022.5.27"
Cython = "^0.29.32"
llvmlite = "^0.39.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.1"
nbmake = "^1.4.1"


[tool.poetry.group.notebook.dependencies]
jupyterlab = "^3.6.1"
jupyterlab-code-formatter = "^1.5.3"
ipykernel = "^6.21.3"


[tool.poetry.group.dev.dependencies]
tox = "^4.4.6"
twine = "^4.0.2"
bump2version = "^1.0.1"
pre-commit = "^3.1.1"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
